Parse char[]'s, improve code re-use and test all types across tests.